--- a/publication.html
+++ b/publication.html
@@ -55,9 +55,9 @@
 		<a href="https://www.linkedin.com/in/zelinye/">Z. Ye</a><sup>*</sup>, 
 		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">C. Mertz</a>,
         <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
-in ECCV 2022 (<font color=ff3399>oral presentation</font>)
+In ECCV 2022 (<font color=ff3399>oral presentation</font>)
 <br>
-[<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">project page</a>]
+[<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">webpage</a>]
 [<a href="https://arxiv.org/abs/2104.02904">paper</a>]
 [<a href="https://github.com/Jamie725/RGBT-detection">github</a>]
 [<a href="https://youtu.be/VH7826g8u7c">video demo</a>]<br>
@@ -144,7 +144,7 @@ In CVPR, 2022<br>
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2205.02361"><b>ShoeRinsics: Shoeprint Prediction for Forensics with Intrinsic Decomposition</b></a>
+<a href="https://arxiv.org/abs/2205.02361"><b>Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</b></a>
 <br>
 <a href="https://sites.google.com/site/samiashafique067">S. Shafique</a>,
 <a href="https://baileykong.com">B. Kong</a>, 
@@ -201,7 +201,7 @@ S. Kong,
 <br>
 In CVPR, 2021  (<font color=ff3399>oral presentation</font>)
 <br>
-[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">Webpage</a>]
+[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">webpage</a>]
 [<a href="https://arxiv.org/abs/2007.03887">arxiv</a>]
 [<a href="https://github.com/yzhao520/CPP">github</a>]
 [<a href="https://www.ics.uci.edu/~yunhaz5/arXiv/CPP_poster.pdf">slides</a>]
@@ -232,7 +232,8 @@ M. Urban,
 <br>
 Proceedings of the National Academy of Sciences of the USA (PNAS), 2020 (<a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news"><font color=ff3399>Featured by NSF news</font></a>)
 <br>
-[<a href="https://doi.org/10.1073/pnas.2007324117">paper</a>][<a href="https://github.com/aimerykong/deepPollen">code</a>]
+[<a href="https://doi.org/10.1073/pnas.2007324117">paper</a>] 
+[a href="https://github.com/aimerykong/deepPollen">code</a>]
 <br>
 </td>
 
@@ -256,7 +257,7 @@ S. Kong,
 <br>
 In CVPR, 2020
 <br>
-[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2020/domain_decluttering.html">project page</a>]
+[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2020/domain_decluttering.html">webpage</a>]
 [<a href="https://arxiv.org/abs/2002.12114">arxiv</a>]
 [<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2020/4343-slides.pdf">slides</a>]
 [<a href="https://github.com/yzhao520/ARC">github</a>]
@@ -281,7 +282,7 @@ S. Kong,
 <br>
 In <a href="https://cvmi2020.github.io/index.html">CVMI</a>@<a href="http://cvpr2020.thecvf.com/">CVPR</a>, 2020
 <br>
-[<a href="https://github.com/DerrickWanglf/Celeganser-Automated-Analysis-of-Nematode-Morphology-and-Age">Webpage</a>]
+[<a href="https://github.com/DerrickWanglf/Celeganser-Automated-Analysis-of-Nematode-Morphology-and-Age">webpage</a>]
 [<a href="https://arxiv.org/abs/2005.04884">arxiv</a>]
 [<a href="https://github.com/DerrickWanglf/Celeganser-Automated-Analysis-of-Nematode-Morphology-and-Age">github</a>]
 <br>
@@ -409,7 +410,7 @@ S. Kong,
 <br>
 <a href="http://arxiv.org/abs/1904.01693">arXiv:1904.01693</a>, 2019
 <br>
-[<a href="https://www.ics.uci.edu/~skong2/mgpff.html">project page</a>]
+[<a href="https://www.ics.uci.edu/~skong2/mgpff.html">webpage</a>]
 [<a href="http://arxiv.org/abs/1904.01693">arxiv</a>]
 [<a href="https://github.com/aimerykong/predictive-filter-flow/tree/master/mgPFF_video">github</a>]
 [<a href="https://github.com/aimerykong/predictive-filter-flow/blob/master/mgPFF_video/demo01_videoSegTrack.ipynb">demo</a>]
