--- a/publication.html
+++ b/publication.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href='static/css/styles.css' />
 	<script src=''></script>
 	<title>Shu Kong</title>
+	<link rel="icon" href="aimerykong_files/profile2.png" type="img/jpg">
 </head>
 
 <body>
