--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,10 @@
 						</div>
 						<div class="list-group-item">
 							<h3 class="pull-left"><i class="fa fa-coffee"></i></h3>
-							<h4>Office</h4>
-							<p class="list-group-item-text">Peterson Building, Department of Computer Science & Engineering, 
-								Texas A&M University, 435 Nagle Street, College Station, TX, 77843</p>
+							<h4>Address</h4>
+							<p class="list-group-item-text">Department of Computer Science & Engineering<br>
+								3112 Texas A&M University<br>
+								College Station, TX 77843-3112</p>
 						</div>
 							
 
