--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<p>
 		My research interests span <strong>Computer Vision</strong> and <strong>applied Machine Learning</strong> (CV/ML), 
 		and their applications to autonomous vehicles and research in natural science. 
-		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Learning and Perception in the Open World</strong></a>. 
+		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
 		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
@@ -98,7 +98,7 @@ Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">
 	<img src="./aimerykong_files/ECCV2022logo.png", width="70">
 	paper "<a href="https://arxiv.org/abs/2104.02904"  target="_blank">Multimodal Object Detection via Probabilistic Ensembling</a>",
 	which is accepted for <font color=ff3399>oral presentation</font>!
-	The proposed method was ranked the first in the <a href="https://eval.ai/web/challenges/challenge-page/1247/leaderboard/3137">KAIST challenge leaderboard</a> by the ECCV'22 submission deadline.
+	The proposed method was ranked the first in the <a href="https://eval.ai/web/challenges/challenge-page/1247/leaderboard/3137">KAIST challenge leaderboard</a>.
 	Code is available in <a href="https://github.com/Jamie725/RGBT-detection">github</a>. (7/8/2022)
 </a>
 </li>
