--- a/publication.html
+++ b/publication.html
@@ -234,7 +234,7 @@ M. Urban,
 Proceedings of the National Academy of Sciences of the USA (PNAS), 2020 (<a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news"><font color=ff3399>Featured by NSF news</font></a>)
 <br>
 [<a href="https://doi.org/10.1073/pnas.2007324117">paper</a>] 
-[a href="https://github.com/aimerykong/deepPollen">code</a>]
+[<a href="https://github.com/aimerykong/deepPollen">code</a>]
 <br>
 </td>
 
