--- a/group.html
+++ b/group.html
@@ -39,21 +39,21 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-	<li>
-	</li>
+		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, MIT)
+		</li>
 	</ul>
 	
 <h4>High-School Students</h4>
 	<ul>
-	<li>Sarthak Jain (Summer 2022)
-	</li>
+		<li>Sarthak Jain (Summer 2022, Los Gatos High School)
+		</li>
 	</ul>
 
 	
 <h4>Affiliates</h4>
 	<ul>
-	<li>
-	</li>
+		<li>Dez Song, Professor, TAMU-CSE
+		</li>
 	</ul>	
 	
 </div>
