--- a/group.html
+++ b/group.html
@@ -50,9 +50,29 @@
 	</ul>
 
 	
-<h4>Affiliates</h4>
+<h4>Affiliates and Collaborators</h4>
 	<ul>
-		<li>Dez Song, Professor, TAMU-CSE
+		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
+		</li>
+		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
+		</li>
+		<li><a href="https://sib.illinois.edu/profile/spunya1">Surangi Punyasena</a>, Associate Professor, UIUC-SIB
+		</li>
+		<li><a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, Professor, CMU-RI
+		</li>
+		<li><a href="https://www.cs.cmu.edu/~dpathak/">Deepak Pathak</a>, Assistant Professor, CMU-RI
+		</li>
+		<li><a href="https://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>, Professor, UCI-ICS
+		</li>		
+		<li><a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>, Assistant Professor, UIUC-CS
+		</li>		
+		<li><a href="https://www.linkedin.com/in/terranceboult">Terry Boult</a>, Professor, UCCS-CS
+		</li>	
+		<li><a href="http://www.cs.umd.edu/~abhinav/">Abhinav Shrivastava</a>, Assistant Professor, UMD-CS
+		</li>
+		<li><a href="https://andrewowens.com/">Andrew Owens</a>, Assistant Professor, UMich-EECS
+		</li>
+		<li><a href="http://www.cs.columbia.edu/~vondrick/">Andrew Owens</a>, Assistant Professor, Columbia-CS
 		</li>
 	</ul>	
 	
