--- a/group.html
+++ b/group.html
@@ -72,7 +72,7 @@
 		</li>
 		<li><a href="https://andrewowens.com/">Andrew Owens</a>, Assistant Professor, UMich-EECS
 		</li>
-		<li><a href="http://www.cs.columbia.edu/~vondrick/">Andrew Owens</a>, Assistant Professor, Columbia-CS
+		<li><a href="http://www.cs.columbia.edu/~vondrick/">Carl Vondrick</a>, Assistant Professor, Columbia-CS
 		</li>
 	</ul>	
 	
