--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ contact
 <h3>Teaching</h3>
 <ul>
 	<li>
-	<p>CSCE689: Visual Learning for Visual Recognition (Fall 2022). </p>
+	<p>CSCE689: Visual Learning for Visual Recognition (Spring 2023). </p>
 	</li>
 </ul>
 
