--- a/index.html
+++ b/index.html
@@ -67,10 +67,13 @@ contact
 <h3>Links</h3>
 <ul>
 	<li>
-	<p><a href="http://vplow.github.io/vplow.html">The 2nd Open World Vision Workshop at CVPR'22: Visual Perception and Learning in an Open World (VPLOW)</a> </p>
+	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a> </p>
 	</li>
 	<li>
-	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/">Workshop at WACV'22: Dealing with Novelty in Open Worlds (DNOW)</a> </p>
+	<p><a href="http://vplow.github.io/vplow.html">The 2nd Open World Vision Workshop: Visual Perception and Learning in an Open World (VPLOW) at CVPR'22</a> </p>
+	</li>
+	<li>
+	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/">The 1st Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a> </p>
 	</li>
 	<li>
 	<p><a href="http://vplow.github.io/open-world-vision.html">The 1st Open World Vision Workshop at CVPR'21</a> </p>
