--- a/index.html
+++ b/index.html
@@ -95,6 +95,31 @@ contact
 
 <li>
 <p>
+Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22</a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
+</a>
+</li>
+	
+	
+<li>
+<p>
+Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22</a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
+</a>
+</li>	
+
+		
+<li>
+<p>
+Our 2nd workshop of <a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/" target="_blank">Dealing with the Novelty in Open Worlds</a> 
+will be held on Jan 3rd, 2023, in conjunction with 
+<a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23</a> in Waikoloa, Hawaii!
+(8/15/2021)
+</p>
+</li>		
+		
+<li>
+<p>
 Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">Yi-Ting</a>, 
 	<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao</a>, and 
 	<a href="https://www.linkedin.com/in/zelinye/">Zelin</a> on the <a href="https://eccv2022.ecva.net"  target="_blank">ECCV'22</a> 
