--- a/index.html
+++ b/index.html
@@ -90,12 +90,20 @@ contact
 
 
 
+
+
+
+
+
 <h3>Research Updates</h3>
 <ul>
 
+
+
 <li>
 <p>
-Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22</a> 
+Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22 
+<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="35"></a> 
 	paper "<a href="https://aimerykong.github.io/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
 </a>
 </li>
@@ -103,7 +111,8 @@ Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a h
 	
 <li>
 <p>
-Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22</a> 
+Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="25"></a> 
+
 	paper "<a href="https://aimerykong.github.io/"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
 </a>
 </li>	
@@ -122,8 +131,8 @@ will be held on Jan 3rd, 2023, in conjunction with
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">Yi-Ting</a>, 
 	<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao</a>, and 
-	<a href="https://www.linkedin.com/in/zelinye/">Zelin</a> on the <a href="https://eccv2022.ecva.net"  target="_blank">ECCV'22</a> 
-	<img src="./aimerykong_files/ECCV2022logo.png", width="70">
+	<a href="https://www.linkedin.com/in/zelinye/">Zelin</a> on the <a href="https://eccv2022.ecva.net"  target="_blank">ECCV'22 
+<img src="./aimerykong_files/ECCV2022logo.png", height="25"></a> 	
 	paper "<a href="https://arxiv.org/abs/2104.02904"  target="_blank">Multimodal Object Detection via Probabilistic Ensembling</a>",
 	which is accepted for <font color=ff3399>oral presentation</font>!
 	The proposed method was ranked the first in the <a href="https://eval.ai/web/challenges/challenge-page/1247/leaderboard/3137">KAIST challenge leaderboard</a>.
@@ -131,13 +140,14 @@ Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">
 </a>
 </li>
 	
+
 <li>
 <p>
 Our paper "<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf"  target="_blank">OpenGAN: Open-Set Recognition Via Open Data Generation</a>" 
 	has been published by <a href="https://ieeexplore.ieee.org/document/9799769"  target="_blank">IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)</a>  (6/18/2022)
 </li>
 		
-		
+
 <li>
 <p>
 Our paper "<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917"  target="_blank">Automated identification of diverse Neotropical pollen samples using convolutional neural networks</a>" has been published by <a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917"  target="_blank">Methods in Ecology and Evolution</a>  (6/12/2022)
@@ -148,15 +158,17 @@ Our paper "<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041
 
 <li>
 <p>
-Our workshop <a href="http://vplow.github.io/vplow.html"  target="_blank">"Visual Perception and Learning in an Open World"</a> <img src="http://vplow.github.io/open-world-vision_files/logo.png", width="20">
-will be held in conjunction with <a href="https://cvpr2022.thecvf.com/"  target="_blank">CVPR'22</a> <img src="./aimerykong_files/CVPR2022logo.png", width="70">  (4/29/2022)
+Our workshop <a href="http://vplow.github.io/vplow.html"  target="_blank">"Visual Perception and Learning in an Open World" <img src="http://vplow.github.io/open-world-vision_files/logo.png", height="23"></a>
+will be held in conjunction with <a href="https://cvpr2022.thecvf.com/"  target="_blank">CVPR'22
+<img src="./aimerykong_files/CVPR2022logo.png", height="23">
+</a>   (4/29/2022)
 </a>
 </li>
 
 
 <li>
 <p>
-Congratulations to <a href="https://www.linkedin.com/in/salshamm">Shaden</a> on the <a href="https://cvpr2022.thecvf.com/"  target="_blank">CVPR'22</a> <img src="./aimerykong_files/CVPR2022logo.png", width="70">
+Congratulations to <a href="https://www.linkedin.com/in/salshamm">Shaden</a> on the <a href="https://cvpr2022.thecvf.com/"  target="_blank">CVPR'22 <img src="./aimerykong_files/CVPR2022logo.png", height="23"></a>
 paper "<a href="https://arxiv.org/abs/2203.14197">Long-Tailed Recognition via Weight Balancing</a>"!
 Code is available in the <a href="https://github.com/ShadeAlsha/LTR-weight-balancing">github page</a>!
 (3/2/2022)
@@ -169,7 +181,7 @@ Code is available in the <a href="https://github.com/ShadeAlsha/LTR-weight-balan
 <p>
 Our paper <a href="https://aimerykong.github.io/OpenGAN.html">"OpenGAN: Open-Set Recognition via Open Data Generation"</a>
 received honorable mention for <font color=ff3399>Best Paper / Marr Prize</font> at 
-<a href="http://iccv2021.thecvf.com/" target="_blank">ICCV'21 <img src="./aimerykong_files/iccv21_logo.png", width="70"></a>.
+<a href="http://iccv2021.thecvf.com/" target="_blank">ICCV'21 <img src="./aimerykong_files/iccv21_logo.png", height="23"></a>.
 Watch this <a href="https://youtu.be/CNYqYXyUHn0">12min video</a>
 (10/12/2021) </p>
 </li>
@@ -179,7 +191,7 @@ Watch this <a href="https://youtu.be/CNYqYXyUHn0">12min video</a>
 <p>
 Our in-person workshop <a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/" target="_blank">Dealing with the Novelty in Open Worlds</a> 
 will be held on Jan 4, 2022, in conjunction with 
-<a href="http://wacv2022.thecvf.com/home" target="_blank">WACV'22 <img src="./aimerykong_files/logo_wacv2022.jpg", width="70"></a>  
+<a href="http://wacv2022.thecvf.com/home" target="_blank">WACV'22 <img src="./aimerykong_files/logo_wacv2022.jpg", height="23"></a>  
 (8/27/2021)
 </p>
 </li>
@@ -187,8 +199,8 @@ will be held on Jan 4, 2022, in conjunction with
 
 <li>
 <p>
-Our challenge <a href="https://eval.ai/web/challenges/challenge-page/1041/overview" target="_blank">Open-World Image Classification<img src="http://vplow.github.io/open-world-vision_files/logo.png", width="20"></a> is online now! The challenge will be held in conjunction with
-our <a href="http://vplow.github.io/open-world-vision.html">Open World Vision workshop</a> and <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a>
+Our challenge <a href="https://eval.ai/web/challenges/challenge-page/1041/overview" target="_blank">Open-World Image Classification <img src="http://vplow.github.io/open-world-vision_files/logo.png", height="23"></a> is online now! The challenge will be held in conjunction with
+our <a href="http://vplow.github.io/open-world-vision.html">Open World Vision workshop</a> and <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", height="23"></a>
 (5/14/2021)
 </p>
 </li>
@@ -198,15 +210,15 @@ our <a href="http://vplow.github.io/open-world-vision.html">Open World Vision wo
 <p>
 	Congratulations to <a href="https://www.ics.uci.edu/~yunhaz5" target="_blank">Yunhan Zhao</a> on the paper <a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">
 	"Camera Pose Matters: Improving Depth Prediction by Mitigating Pose Distribution Bias"</a>, which is accepted for <font color=ff3399>oral presentation</font> by 
-<a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a> (03/3/2021) </p>
+<a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", height="23"></a> (03/3/2021) </p>
 </li>
 
 
 <li>
 <p>
 Our virtual workshop <a href="http://vplow.github.io/open-world-vision.html" target="_blank">Open-World Vision
-	<img src="http://vplow.github.io/open-world-vision_files/logo.png", width="20"></a> will be held in conjunction with 
-<a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a>  
+	<img src="http://vplow.github.io/open-world-vision_files/logo.png", height="23"></a> will be held in conjunction with 
+<a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", height="23"></a>  
 (12/11/2020)
 </p>
 </li>
@@ -216,9 +228,9 @@ Our virtual workshop <a href="http://vplow.github.io/open-world-vision.html" tar
 <li>
 <p>
 Our work is published on <a href="https://doi.org/10.1073/pnas.2007324117" target="_blank">
-<img src="./aimerykong_files/pnas_logo.jpg" width="100"></a>
+<img src="./aimerykong_files/pnas_logo.jpg" height="20"></a>
 "<a href="https://doi.org/10.1073/pnas.2007324117" target="_blank">Improving the Taxonomy of Fossil Pollen using Convolutional Neural Networks and Superresolution Microscopy</a>",
-and featured by the <a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news" target="_blank">NSF<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/NSF_logo.png/220px-NSF_logo.png", width="23"></a></a>.
+and featured by the <a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news" target="_blank">NSF<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/NSF_logo.png/220px-NSF_logo.png", height="23"></a></a>.
 (09/14/2020)
 </p>
 </li>
