--- a/publication.html
+++ b/publication.html
@@ -41,6 +41,59 @@
 <table cellspacing="15"> 
 <tbody>
 
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://aimerykong.github.io/">
+<img src="aimerykong_files/splashy_NeurIPS2022.jpg" height="110" border="0">
+</a><br>
+</td>
+<td>
+<a href="https://aimerykong.github.io/">
+<b>Learning With an Evolving Class Ontology</b></a>
+<br>
+<a href="https://linzhiqiu.github.io/">Z. Lin</a>, 
+	<a href="https://www.cs.cmu.edu/~dpathak/">D. Pathak</a>, 
+	<a href="https://yxw.web.illinois.edu/">Y. Wang</a>, 
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, 
+	S. Kong <br>
+In NeurIPS 2022
+<br>
+[<a href="https://aimerykong.github.io/">webpage</a>]
+[<a href="https://aimerykong.github.io/">paper</a>]
+[<a href="https://aimerykong.github.io/">github</a>]
+<br>
+</td>
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://aimerykong.github.io/">
+<img src="aimerykong_files/splashy_corl2022.jpg" height="110" border="0">
+</a><br>
+</td>
+<td>
+<a href="https://aimerykong.github.io/">
+<b>Towards Long Tailed 3D Detection</b></a>
+<br>
+<a href="http://www.neeharperi.com/">N. Peri</a>, 
+		<a href="https://www.achaldave.com/">A. Dave</a>, 
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
+In CoRL 2022
+<br>
+[<a href="https://aimerykong.github.io/">webpage</a>]
+[<a href="https://aimerykong.github.io/">paper</a>]
+[<a href="https://aimerykong.github.io/">github</a>]
+<br>
+</td>
+
+
+
 <tr>
 <td width="35%" height=150>
 <a href="https://github.com/Jamie725/RGBT-detection">
