--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a hre
 <li>
 <p>
 Our 2nd workshop of <a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/" target="_blank">Dealing with the Novelty in Open Worlds</a> 
-will be held on Jan 3rd, 2023, in conjunction with 
-<a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23</a> in Waikoloa, Hawaii!
+will be held on Jan 3rd, 2023, at 
+<a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23 <img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> in Waikoloa, Hawaii!
 (8/15/2021)
 </p>
 </li>		
