--- a/group.html
+++ b/group.html
@@ -29,18 +29,20 @@
 <div class="row">
 
 	
-<h4>Graduate Students</h4>
+<h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
-	<li>Marc-Elie Adaime (PhD student, co-advised with Surangi W. Punyasena at UIUC)
-	</li>
-	<li>Jennifer Feng (Master student, co-advised with Surangi W. Punyasena at UIUC)
-	</li>
+		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD student, co-advised with Jeeeun Kim)</li>
+		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
+		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
+		<li>Marc-Elie Adaime (PhD student, co-advised with Surangi W. Punyasena at UIUC)</li>
+		<li>Jennifer Feng (Master student, co-advised with Surangi W. Punyasena at UIUC)</li>		
+		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (previously undergraduate at UMD, now PhD at CMU, co-advised by Deva Ramanan)</li>
+		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 	</ul>
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, MIT)
-		</li>
+		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, MIT)</li>
 	</ul>
 	
 <h4>High-School Students</h4>
@@ -55,6 +57,10 @@
 		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
 		</li>
 		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
+		</li>
+		<li><a href="https://people.engr.tamu.edu/huangrh/index.html">Ruihong Huang</a>, Associate Professor, TAMU-CSE
+		</li>
+		<li><a href="http://people.tamu.edu/~tianbao-yang/">Tianbao Yang</a>, Associate Professor, TAMU-CSE
 		</li>
 		<li><a href="https://sib.illinois.edu/profile/spunya1">Surangi Punyasena</a>, Associate Professor, UIUC-SIB
 		</li>
