--- a/group.html
+++ b/group.html
@@ -42,7 +42,8 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, MIT)</li>
+		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT)</li>
+		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD, now PhD at CMU)</li>
 	</ul>
 	
 <h4>High-School Students</h4>
