--- a/group.html
+++ b/group.html
@@ -34,10 +34,10 @@
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD student, co-advised with Jeeeun Kim)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
 		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
-		<li>Marc-Elie Adaime (PhD student, co-advised with Surangi W. Punyasena at UIUC)</li>
-		<li>Jennifer Feng (Master student, co-advised with Surangi W. Punyasena at UIUC)</li>		
-		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (previously undergraduate at UMD, now PhD at CMU, co-advised by Deva Ramanan)</li>
+		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD student, co-advised with Surangi W. Punyasena at UIUC)</li>
+		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
+		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master student, co-advised with Surangi W. Punyasena at UIUC)</li>		
 	</ul>
 	
 <h4>Undergraduate Students</h4>
