--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	
 	<p>
 		<font color="#8B0000"><strong>
-			I am looking for self-motivated PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department</a>, starting Spring/Fall 2023.
+			I am looking for self-motivated PhD students at the <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department</a>, starting in Spring/Fall 2023.
 			PhD students will be fully funded with fellowships.
 			Please feel free to contact me if interested.
 		</strong></font>
