--- a/group.html
+++ b/group.html
@@ -31,16 +31,16 @@
 	
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
-		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD student, co-advised with Jeeeun Kim)</li>
+		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised with Jeeeun Kim)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
 		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
-		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD student, co-advised with Surangi W. Punyasena at UIUC)</li>
+		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD student at UIUC, co-advised with Surangi Punyasena)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
-		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master student, co-advised with Surangi W. Punyasena at UIUC)</li>
-		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV student, now PhD at UMD)</li>
-		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD student at ASU, now at Amazon Alexa AI)</li>
-		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (master at UCI, now at Microsoft)</li>
+		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised with Surangi Punyasena)</li>
+		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
+		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
+		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
 	</ul>
 	
 <h4>Undergraduate Students</h4>
