--- a/group.html
+++ b/group.html
@@ -51,7 +51,7 @@
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li>Sarthak Jain (Summer 2022, Los Gatos High School)
+		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School)
 		</li>
 	</ul>
 
