--- a/publication.html
+++ b/publication.html
@@ -57,8 +57,8 @@
 <a href="https://linzhiqiu.github.io/">Z. Lin</a>, 
 	<a href="https://www.cs.cmu.edu/~dpathak/">D. Pathak</a>, 
 	<a href="https://yxw.web.illinois.edu/">Y. Wang</a>, 
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, 
-	S. Kong <br>
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, 
+	S. Kong<sup>#</sup> <br>
 In NeurIPS 2022
 <br>
 [<a href="https://aimerykong.github.io/">webpage</a>]
