--- a/group.html
+++ b/group.html
@@ -16,7 +16,7 @@
 
 	<div class="my-container">
 		<h1> Computer Vision Lab at Texas A&M </h1>
-		
+		<span>research areas: computer vision, machine learning, robotics, NLP, HCI, interdisciplinary research (e.g., plant biology, paleoecology, etc.) </span>
 		
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
