--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 					<img class="img-responsive img-rounded" src="./aimerykong_files/profile_shu.jpg">
 				</div>
 				<div class="col-sm-10">
-        <p> I am an incoming assistant professor at <a href="https://www.tamu.edu/"> Texas A&M University</a> in the <a href="https://engineering.tamu.edu/cse/index.html">CSE department</a>, 
+        <p style="font-size:16px;font-family:Times"> I am an incoming assistant professor at <a href="https://www.tamu.edu/"> Texas A&M University</a> in the <a href="https://engineering.tamu.edu/cse/index.html">CSE department</a>, 
 		  where I lead the <a href="group.html">Computer Vision Lab</a>. 
 		  I am a postdoctoral fellow at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
 		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
 		  I received a Ph.D. from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
 	</p>
 	
-	<p>
+	<p style="font-size:16px;font-family:Times">
 		My research interests span <strong>Computer Vision</strong> and <strong>applied Machine Learning</strong> (CV/ML), 
 		and their applications to autonomous vehicles and research in natural science. 
 		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
@@ -47,25 +47,25 @@
 		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
 	</p>
 	
-	<p>
-		<font color="#8B0000"><strong>
-			I am looking for self-motivated PhD students at the <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department</a>, starting in Spring/Fall 2023.
+	<p style="font-size:16px;font-family:Times">
+		<font color="#8B0000">
+			I am looking for self-motivated PhD students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.
 			PhD students will be fully funded with fellowships.
 			Please feel free to contact me if interested.
-		</strong></font>
+		</font>
 	</p>
 
 
-contact
-<ul>
+<h3 style="font-size:20px;font-family:Times">contact</h3>
+<ul style="font-size:15px;font-family:Times;line-height:15px">
 <li>gmail: aimerykong [at] gmail [dot] com</li>
-<li>email: shu [at] tamu [dot] com</li>
+<li>email: shu [at] tamu [dot] edu</li>
 </ul>
-				</div>
-    		</div>
+</div>
+</div>
 		
-<h3>Links</h3>
-<ul>
+<h3 style="font-size:20px;font-family:Times">Links</h3>
+<ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
 	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a> </p>
 	</li>
@@ -81,8 +81,8 @@ contact
 </ul>
 
 		
-<h3>Teaching</h3>
-<ul>
+<h3 style="font-size:20px;font-family:Times">Teaching</h3>
+<ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
 	<p>CSCE689: Visual Learning for Visual Recognition (Spring 2023). </p>
 	</li>
@@ -95,10 +95,9 @@ contact
 
 
 
-<h3>Research Updates</h3>
-<ul>
+<h3 style="font-size:20px;font-family:Times">Research Updates</h3>
 
-
+<ul style="font-size:13px;font-family:Times">
 
 <li>
 <p>
@@ -123,7 +122,7 @@ Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a hre
 Our 2nd workshop of <a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/" target="_blank">Dealing with the Novelty in Open Worlds</a> 
 will be held on Jan 3rd, 2023, at 
 <a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23 <img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> in Waikoloa, Hawaii!
-(8/15/2022)
+(8/15/2021)
 </p>
 </li>		
 		
