--- a/group.html
+++ b/group.html
@@ -39,6 +39,8 @@
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
 		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena)</li>
+		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU)</li>
+		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU)</li>
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
 		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
 		<li><a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a> (MSCV at CMU, now at Aibee)</li>
