--- a/group.html
+++ b/group.html
@@ -66,11 +66,13 @@
 	<ul>
 		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
 		</li>
-		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
-		</li>
 		<li><a href="https://people.engr.tamu.edu/huangrh/index.html">Ruihong Huang</a>, Associate Professor, TAMU-CSE
 		</li>
+		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
+		</li>
 		<li><a href="http://people.tamu.edu/~tianbao-yang/">Tianbao Yang</a>, Associate Professor, TAMU-CSE
+		</li>
+		<li><a href="http://people.tamu.edu/~sji/">Shuiwang Ji</a>, Professor, TAMU-CSE
 		</li>
 		<li><a href="https://sib.illinois.edu/profile/spunya1">Surangi Punyasena</a>, Associate Professor, UIUC-SIB
 		</li>
