--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
 
 <ul style="font-size:13px;font-family:Times">
 
+
+<li>
+<p>
+Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Samia</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
+<img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</a>"! (10/10/2022)
+</a>
+</li>
+
+
+
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham</a> and <a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
+<img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Far3Det: Towards Far-Field 3D Detection</a>"! (10/10/2022)
+</a>
+</li>
+
+
 <li>
 <p>
 Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22 
