--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,56 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2205.02361">
+<img src="aimerykong_files/WACV23-ShoeRinsics.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2205.02361"><b>Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</b></a>
+<br>
+<a href="https://sites.google.com/site/samiashafique067">S. Shafique</a>,
+<a href="https://baileykong.com">B. Kong</a>, 
+S. Kong<sup>*</sup>, 
+<a href="https://www.ics.uci.edu/~fowlkes">C. Fowlkes</a><sup>*</sup>
+<br>
+In WACV 2022
+<br>
+[<a href="https://github.com/Samia067/ShoeRinsics">github</a>]
+[<a href="https://arxiv.org/abs/2205.02361">paper</a>]
+<br>
+</td>
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://aimerykong.github.io/">
+<img src="aimerykong_files/Far3Det.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://aimerykong.github.io/"><b>Far3Det: Towards Far-Field 3D Detection</b></a>
+<br>
+<a href="https://www.linkedin.com/in/shubham-gupta94/">S. Gupta</a>,
+<a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">J. Kanjani</a>,
+<a href="https://mtli.github.io/">M. Li</a>,
+<a href="https://www.linkedin.com/in/francesco-ferroni-44708137/">F. Ferroni</a>,
+<a href="https://faculty.cc.gatech.edu/~hays/">J. Hays</a>,
+<a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>
+S. Kong<sup>#</sup>
+<br>
+In WACV 2022
+<br>
+[<a href="https://aimerykong.github.io/">github</a>]
+[<a href="https://aimerykong.github.io/">paper</a>]
+<br>
+</td>
+
+
+
 
 <tr>
 <td width="35%" height=150>
@@ -191,26 +241,6 @@ In CVPR, 2022<br>
 
 
 
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2205.02361">
-<img src="aimerykong_files/WACV23-ShoeRinsics.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2205.02361"><b>Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</b></a>
-<br>
-<a href="https://sites.google.com/site/samiashafique067">S. Shafique</a>,
-<a href="https://baileykong.com">B. Kong</a>, 
-S. Kong<sup>*</sup>, 
-<a href="https://www.ics.uci.edu/~fowlkes">C. Fowlkes</a><sup>*</sup>
-<br>
-<a href="https://arxiv.org/abs/2205.02361">arXiv:2205.02361</a>, 2022
-<br>
-[<a href="https://github.com/Samia067/ShoeRinsics">github</a>]
-[<a href="https://arxiv.org/abs/2205.02361">paper</a>]
-<br>
-</td>
 
 
 <tr>
@@ -251,7 +281,7 @@ See journal version published by PAMI [<a href="https://github.com/aimerykong/ai
 <br>
 <a href="https://www.ics.uci.edu/~yunhaz5/">Y. Zhao</a>,
 S. Kong,
-<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>,
+<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>
 <br>
 In CVPR, 2021  (<font color=ff3399>oral presentation</font>)
 <br>
@@ -1023,7 +1053,7 @@ Palynological Society</em>, 2017.
 
 <li>
 <div class="publication">
-<p> <b>Shu Kong</b>, Charless C. Fowlkes, "<font color=#AF7817>Low-rank Bilinear Pooling for Fine-Grained Classification</font>",  <em><a href="http://dolcit.cms.caltech.edu/scmls/">Southern California Machine Learning Symposium</a></em>, 2016.
+<p> <b>Shu Kong</b>, Charless C. Fowlkes "<font color=#AF7817>Low-rank Bilinear Pooling for Fine-Grained Classification</font>",  <em><a href="http://dolcit.cms.caltech.edu/scmls/">Southern California Machine Learning Symposium</a></em>, 2016.
 <br>
 </p>
 </div>
