--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubha
 <p>
 Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22 
 <img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="35"></a> 
-	paper "<a href="https://aimerykong.github.io/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
+	paper "<a href="https://linzhiqiu.github.io/papers/leco/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
 </a>
 </li>
 	
