--- a/publication.html
+++ b/publication.html
@@ -96,12 +96,12 @@ In WACV 2022
 
 <tr>
 <td width="35%" height=150>
-<a href="https://aimerykong.github.io/">
+<a href="https://linzhiqiu.github.io/papers/leco/">
 <img src="aimerykong_files/splashy_NeurIPS2022.jpg" height="110" border="0">
 </a><br>
 </td>
 <td>
-<a href="https://aimerykong.github.io/">
+<a href="https://linzhiqiu.github.io/papers/leco/">
 <b>Learning With an Evolving Class Ontology</b></a>
 <br>
 <a href="https://linzhiqiu.github.io/">Z. Lin</a>, 
@@ -111,9 +111,9 @@ In WACV 2022
 	S. Kong<sup>#</sup> <br>
 In NeurIPS 2022
 <br>
-[<a href="https://aimerykong.github.io/">webpage</a>]
-[<a href="https://aimerykong.github.io/">paper</a>]
-[<a href="https://aimerykong.github.io/">github</a>]
+[<a href="https://linzhiqiu.github.io/papers/leco/">webpage</a>]
+[<a href="https://linzhiqiu.github.io/papers/leco/">paper</a>]
+[<a href="https://linzhiqiu.github.io/papers/leco/">github</a>]
 <br>
 </td>
 
