--- a/group.html
+++ b/group.html
@@ -82,6 +82,8 @@
 		</li>
 		<li><a href="https://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>, Professor, UCI-ICS
 		</li>		
+		<li><a href="https://faculty.cc.gatech.edu/~hays/">James Hays</a>, Associate Professor, Gatech-IC
+		</li>		
 		<li><a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>, Assistant Professor, UIUC-CS
 		</li>		
 		<li><a href="https://www.linkedin.com/in/terranceboult">Terry Boult</a>, Professor, UCCS-CS
